--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,51 +1,51 @@
 body {
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
 .cards-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .card-link {
-    text-decoration: none;
-    color: unset;
+  text-decoration: none;
+  color: unset;
 }
 
 .header {
-    background-color: #222;
-    display: flex;
-}
-.header-logo {
-    background-color: #1a73e8;
+  background-color: #222;
+  display: flex;
 }
 .header a {
-    text-decoration: none;
+  text-decoration: none;
 }
 .header-powered-text {
-    display: flex;
-    color: #1a73e8;
-    background-color: #fff;
-    font-size: 20px;
-    margin: 5px;
-    padding: 2px 5px;
+  display: flex;
+  color: #fff;
+  font-size: 20px;
+  padding: 2px 5px;
 }
 .header-news-text {
-    letter-spacing: -1px;
-    padding: 5px 0 5px 6px;
-    background-color: #1a73e8;
-    color: white;
-    font-size: 36px;
+  letter-spacing: -1px;
+  padding: 5px 0 5px 6px;
+  color: #fff;
+  font-size: 36px;
 }
 .header-api-text {
-    margin: 0 3px 0 8px;
-    padding: 0 8px;
-    color: #1a73e8;
-    background-color: #fff;
+  margin: 0 3px 0 8px;
+  padding: 0 8px;
+  color: black;
+  background-color: #fff;
 }
 
 .news-selector-wrapper {
-    margin: 20px 0 150px 0;
-    display: flex;
-    justify-content: center;
+  margin: 20px 0 150px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.pagination {
+  margin: 60px 0px;
+  display: flex;
+  justify-content: center;
 }
